feat: v0.1.25 audit, perf optimizations, and docs alignment
- Fix commit overage emit condition: was firing on every commit,
  now only emits reservation.commit_overage when charged > estimated
- Async event emission via CompletableFuture on daemon thread pool
- Pipeline Redis commands in EventEmitterRepository (6→1 round-trips)
- Early exit on no subscribers (zero overhead when no webhooks configured)
- Update all version refs from v0.1.24 to v0.1.25 across docs, POMs, and Java sources
- Fix inner README doc bug: GET reservation returns 410 for EXPIRED (not 200)
- Update AUDIT.md with perf optimizations (16 total), test counts (553), benchmarks
- Add v0.1.25.1 benchmark section to BENCHMARKS.md with analysis

Build: 553 tests, 0 failures, 95%+ coverage. Throughput: 2,584 ops/s at 32 threads.