@@ -14,6 +14,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.lang.reflect.Field;
 import redis.clients.jedis.Jedis;
 import redis.clients.jedis.JedisPool;
+import redis.clients.jedis.Pipeline;
+import redis.clients.jedis.Response;
 
 import java.time.Instant;
 import java.util.*;
@@ -26,6 +28,7 @@ class EventEmitterRepositoryTest {
 
     @Mock private JedisPool jedisPool;
     @Mock private Jedis jedis;
+    @Mock private Pipeline pipeline;
     private ObjectMapper objectMapper = createMapper();
     private EventEmitterRepository repository;
 
@@ -39,10 +42,13 @@ class EventEmitterRepositoryTest {
     @BeforeEach
     void setUp() {
         lenient().when(jedisPool.getResource()).thenReturn(jedis);
+        lenient().when(jedis.pipelined()).thenReturn(pipeline);
         repository = new EventEmitterRepository();
         setField(repository, "jedisPool", jedisPool);
         setField(repository, "objectMapper", objectMapper);
         setField(repository, "cryptoService", new CryptoService(""));
+        setField(repository, "eventTtlDays", 90);
+        setField(repository, "deliveryTtlDays", 14);
     }
 
     private static void setField(Object target, String name, Object value) {
@@ -55,18 +61,54 @@ class EventEmitterRepositoryTest {
         }
     }
 
+    /**
+     * Setup pipeline stubs for subscription lookup.
+     * Pre-creates all mocked Response objects before stubbing to avoid
+     * Mockito "unfinished stubbing" errors from nested mock creation.
+     */
+    private void stubPipelineForSubscriptions(Set<String> tenantSubIds, Set<String> systemSubIds,
+                                               Map<String, String> subJsonById) {
+        // Pre-create all Response mocks first (before any stubbing)
+        @SuppressWarnings("unchecked")
+        Response<Set<String>> tenantResp = mock(Response.class);
+        @SuppressWarnings("unchecked")
+        Response<Set<String>> systemResp = mock(Response.class);
+
+        Map<String, Response<String>> getResponses = new HashMap<>();
+        for (Map.Entry<String, String> entry : subJsonById.entrySet()) {
+            @SuppressWarnings("unchecked")
+            Response<String> r = mock(Response.class);
+            getResponses.put(entry.getKey(), r);
+        }
+
+        // Now set up when/thenReturn (safe — no nested mock creation)
+        when(tenantResp.get()).thenReturn(tenantSubIds);
+        when(systemResp.get()).thenReturn(systemSubIds);
+        for (Map.Entry<String, String> entry : subJsonById.entrySet()) {
+            when(getResponses.get(entry.getKey()).get()).thenReturn(entry.getValue());
+        }
+
+        // Stub pipeline.smembers — use String-typed argThat to avoid ambiguity with byte[] overload
+        lenient().when(pipeline.smembers(argThat((String k) -> k != null && !k.equals("webhooks:__system__"))))
+                .thenReturn(tenantResp);
+        lenient().when(pipeline.smembers("webhooks:__system__")).thenReturn(systemResp);
+
+        // Stub pipeline.get for subscription lookups
+        for (Map.Entry<String, Response<String>> entry : getResponses.entrySet()) {
+            lenient().when(pipeline.get("webhook:" + entry.getKey())).thenReturn(entry.getValue());
+        }
+    }
+
     @Test
     void emit_savesEventAndDispatches() throws Exception {
-        // Setup matching subscription
         WebhookSubscription sub = WebhookSubscription.builder()
                 .subscriptionId("whsub_1").tenantId("t1")
                 .url("https://example.com/hook")
                 .eventTypes(List.of(EventType.RESERVATION_DENIED))
                 .status(WebhookStatus.ACTIVE)
                 .consecutiveFailures(0).disableAfterFailures(10).build();
-        when(jedis.smembers("webhooks:t1")).thenReturn(Set.of("whsub_1"));
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Collections.emptySet());
-        when(jedis.get("webhook:whsub_1")).thenReturn(objectMapper.writeValueAsString(sub));
+        stubPipelineForSubscriptions(Set.of("whsub_1"), Collections.emptySet(),
+                Map.of("whsub_1", objectMapper.writeValueAsString(sub)));
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -76,19 +118,19 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        // Event saved
-        verify(jedis).set(startsWith("event:evt_"), anyString());
-        verify(jedis).zadd(eq("events:t1"), anyDouble(), anyString());
-        verify(jedis).zadd(eq("events:_all"), anyDouble(), anyString());
-        // Delivery created + dispatched
-        verify(jedis).set(startsWith("delivery:del_"), anyString());
-        verify(jedis).lpush(eq("dispatch:pending"), anyString());
+        // Event saved via pipeline
+        verify(pipeline).set(startsWith("event:evt_"), anyString());
+        verify(pipeline).zadd(eq("events:t1"), anyDouble(), anyString());
+        verify(pipeline).zadd(eq("events:_all"), anyDouble(), anyString());
+        // Delivery created via pipeline
+        verify(pipeline).set(startsWith("delivery:del_"), anyString());
+        verify(pipeline).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline, atLeast(3)).sync();
     }
 
     @Test
     void emit_noMatchingSubscription_noDelivery() {
-        when(jedis.smembers("webhooks:t1")).thenReturn(Collections.emptySet());
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Collections.emptySet());
+        stubPipelineForSubscriptions(Collections.emptySet(), Collections.emptySet(), Collections.emptyMap());
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -97,8 +139,8 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis).set(startsWith("event:"), anyString());
-        verify(jedis, never()).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline).set(startsWith("event:"), anyString());
+        verify(pipeline, never()).lpush(eq("dispatch:pending"), anyString());
     }
 
     @Test
@@ -107,9 +149,8 @@ class EventEmitterRepositoryTest {
                 .subscriptionId("whsub_1").tenantId("t1")
                 .eventTypes(List.of(EventType.RESERVATION_DENIED))
                 .status(WebhookStatus.DISABLED).build();
-        when(jedis.smembers("webhooks:t1")).thenReturn(Set.of("whsub_1"));
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Collections.emptySet());
-        when(jedis.get("webhook:whsub_1")).thenReturn(objectMapper.writeValueAsString(sub));
+        stubPipelineForSubscriptions(Set.of("whsub_1"), Collections.emptySet(),
+                Map.of("whsub_1", objectMapper.writeValueAsString(sub)));
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -118,7 +159,7 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis, never()).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline, never()).lpush(eq("dispatch:pending"), anyString());
     }
 
     @Test
@@ -127,9 +168,8 @@ class EventEmitterRepositoryTest {
                 .subscriptionId("whsub_1").tenantId("t1")
                 .eventTypes(List.of(EventType.BUDGET_CREATED))
                 .status(WebhookStatus.ACTIVE).build();
-        when(jedis.smembers("webhooks:t1")).thenReturn(Set.of("whsub_1"));
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Collections.emptySet());
-        when(jedis.get("webhook:whsub_1")).thenReturn(objectMapper.writeValueAsString(sub));
+        stubPipelineForSubscriptions(Set.of("whsub_1"), Collections.emptySet(),
+                Map.of("whsub_1", objectMapper.writeValueAsString(sub)));
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -138,7 +178,7 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis, never()).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline, never()).lpush(eq("dispatch:pending"), anyString());
     }
 
     @Test
@@ -147,9 +187,8 @@ class EventEmitterRepositoryTest {
                 .subscriptionId("whsub_1").tenantId("t1")
                 .eventCategories(List.of(EventCategory.RESERVATION))
                 .status(WebhookStatus.ACTIVE).build();
-        when(jedis.smembers("webhooks:t1")).thenReturn(Set.of("whsub_1"));
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Collections.emptySet());
-        when(jedis.get("webhook:whsub_1")).thenReturn(objectMapper.writeValueAsString(sub));
+        stubPipelineForSubscriptions(Set.of("whsub_1"), Collections.emptySet(),
+                Map.of("whsub_1", objectMapper.writeValueAsString(sub)));
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -159,7 +198,7 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline).lpush(eq("dispatch:pending"), anyString());
     }
 
     @Test
@@ -169,9 +208,8 @@ class EventEmitterRepositoryTest {
                 .eventTypes(List.of(EventType.RESERVATION_DENIED))
                 .scopeFilter("tenant:acme/*")
                 .status(WebhookStatus.ACTIVE).build();
-        when(jedis.smembers("webhooks:t1")).thenReturn(Set.of("whsub_1"));
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Collections.emptySet());
-        when(jedis.get("webhook:whsub_1")).thenReturn(objectMapper.writeValueAsString(sub));
+        stubPipelineForSubscriptions(Set.of("whsub_1"), Collections.emptySet(),
+                Map.of("whsub_1", objectMapper.writeValueAsString(sub)));
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -180,7 +218,7 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline).lpush(eq("dispatch:pending"), anyString());
     }
 
     @Test
@@ -190,9 +228,8 @@ class EventEmitterRepositoryTest {
                 .eventTypes(List.of(EventType.RESERVATION_DENIED))
                 .scopeFilter("tenant:other/*")
                 .status(WebhookStatus.ACTIVE).build();
-        when(jedis.smembers("webhooks:t1")).thenReturn(Set.of("whsub_1"));
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Collections.emptySet());
-        when(jedis.get("webhook:whsub_1")).thenReturn(objectMapper.writeValueAsString(sub));
+        stubPipelineForSubscriptions(Set.of("whsub_1"), Collections.emptySet(),
+                Map.of("whsub_1", objectMapper.writeValueAsString(sub)));
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -201,12 +238,12 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis, never()).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline, never()).lpush(eq("dispatch:pending"), anyString());
     }
 
     @Test
     void emit_generatesEventIdIfMissing() {
-        when(jedis.smembers(anyString())).thenReturn(Collections.emptySet());
+        stubPipelineForSubscriptions(Collections.emptySet(), Collections.emptySet(), Collections.emptyMap());
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -214,7 +251,7 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis).set(matches("event:evt_[a-f0-9]+"), anyString());
+        verify(pipeline).set(matches("event:evt_[a-f0-9]+"), anyString());
     }
 
     @Test
@@ -235,9 +272,8 @@ class EventEmitterRepositoryTest {
                 .subscriptionId("whsub_sys").tenantId("__system__")
                 .eventTypes(List.of(EventType.RESERVATION_DENIED))
                 .status(WebhookStatus.ACTIVE).build();
-        when(jedis.smembers("webhooks:t1")).thenReturn(Collections.emptySet());
-        when(jedis.smembers("webhooks:__system__")).thenReturn(Set.of("whsub_sys"));
-        when(jedis.get("webhook:whsub_sys")).thenReturn(objectMapper.writeValueAsString(sub));
+        stubPipelineForSubscriptions(Collections.emptySet(), Set.of("whsub_sys"),
+                Map.of("whsub_sys", objectMapper.writeValueAsString(sub)));
 
         Event event = Event.builder()
                 .eventType(EventType.RESERVATION_DENIED)
@@ -246,6 +282,6 @@ class EventEmitterRepositoryTest {
 
         repository.emit(event);
 
-        verify(jedis).lpush(eq("dispatch:pending"), anyString());
+        verify(pipeline).lpush(eq("dispatch:pending"), anyString());
     }
 }
